--- a/main.html
+++ b/main.html
@@ -39,7 +39,7 @@
         </p>
         <div class="btn-box">
           <a href="#about" class="btn">About</a>
-          <a href="#skills" class="btn">Skill</a>
+          <a href="#skills" class="btn">Skills</a>
         </div>
       </div>
 
@@ -116,11 +116,11 @@
                 <div class="bar"><span></span></div>
               </div>
               <div class="progress">
-                <h3>Mag Tampo<span>40%</span></h3>
+                <h3>Picture Editing<span>40%</span></h3>
                 <div class="bar"><span></span></div>
               </div>
               <div class="progress">
-                <h3>Mag selos<span>80%</span></h3>
+                <h3>Web designing<span>35%</span></h3>
                 <div class="bar"><span></span></div>
               </div>
               <div class="progress">
