--- a/main.html
+++ b/main.html
@@ -68,7 +68,7 @@
         <h3>PREX</h3>
         <p>
           HELLO, MY NAME IS PREX LOUIS R. NATI, BUT YOU CAN CALL ME PREX. I'M
-          FROM DASMARINAS CAVITE, 19 YEARS OLD, A 2ND YEAR COLLAGE STUDENT
+          FROM DASMARINAS CAVITE, 19 YEARS OLD, A 2ND YEAR COLLEGE STUDENT
           COURSE OF BACHELOR OF SCIENCE IN INFORMATION TECHNOLOGY (BSIT).
         </p>
 
